--- a/src/main/resources/templates/computer-details.html
+++ b/src/main/resources/templates/computer-details.html
@@ -13,7 +13,8 @@
             <h6 class="card-subtitle font-weight-bold " th:text="*{computerName}">Computer name</h6>
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-6">
-                    <div class="white-box text-center"><img src="/images/desktop-computer.png" class="img-responsive bg-cart img-fluid"></div>
+                    <div class="white-box text-center"><img src="/images/desktop-computer.png"
+                                                            class="img-responsive bg-cart img-fluid"></div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6">
                     <h4 class="box-title mt-5">Computer description</h4>
@@ -23,20 +24,26 @@
 
                     </h2>
 
-                    <a th:href="@{/offers/computers/{id}/buy(id = *{id})}" class="btn btn-primary btn-rounded btn-success">Buy</a>
+                    <a th:href="@{/offers/computers/{id}/buy(id = *{id})}"
+                       class="btn btn-primary btn-rounded btn-success">Buy</a>
                     <a th:href="@{/offers/computers/{id}/edit(id = *{id})}" class="btn btn-primary btn-rounded">Edit</a>
 
-<!--                    <th:block th:if="*{canDelete}">-->
-                        <form th:action="@{/offers/computers/{id}/delete(id = *{id})}" th:method="delete" class="btn btn-primary btn-rounded btn-danger">
-                            <input type="submit" class="bg-transparent" style="border:none; color: white" value="Delete"/>
-                        </form>
-<!--                    </th:block>-->
+                    <!--                    <th:block th:if="*{canDelete}">-->
+                    <form th:action="@{/offers/computers/{id}/delete(id = *{id})}" th:method="delete"
+                          class="btn btn-primary btn-rounded btn-danger">
+                        <input type="submit" class="bg-transparent" style="border:none; color: white" value="Delete"/>
+                    </form>
+                    <!--                    </th:block>-->
 
-                    <h3 class="box-title mt-5">Key Highlights</h3>
+                    <h3 class="box-title mt-5">Keys for buying the product</h3>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-check text-success"></i>Trust our choice for the perfect custom built machine!</li>
-                        <li><i class="fa fa-check text-success"></i>Designed to make your work and your life easier!</li>
-                        <li><i class="fa fa-check text-success"></i>Perfect example of a modern and trustfully device!</li>
+                        <li><i class="fa fa-check text-success"></i>Trust our choice for the perfect custom built
+                            machine!
+                        </li>
+                        <li><i class="fa fa-check text-success"></i>Designed to make your work and your life easier!
+                        </li>
+                        <li><i class="fa fa-check text-success"></i>Perfect example of a modern and trustfully device!
+                        </li>
                     </ul>
 
                 </div>
