--- a/src/main/resources/templates/smartphone-details.html
+++ b/src/main/resources/templates/smartphone-details.html
@@ -31,7 +31,7 @@
                     <form th:action="@{/offers/smartphones/{id}/delete(id = *{id})}" th:method="delete" class="btn btn-primary btn-rounded btn-danger">
                         <input type="submit" class="bg-transparent" style="border:none; color: white" value="Delete"/>
                     </form>
-                    <h3 class="box-title mt-5">Key Highlights</h3>
+                    <h3 class="box-title mt-5">Keys for buying the product</h3>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-check text-success"></i>Trust our choice for the perfect custom built machine!</li>
                         <li><i class="fa fa-check text-success"></i>Designed to make your work and your life easier!</li>
