finished the smartphones logic

--- a/src/main/resources/templates/add-smartphone-offer.html
+++ b/src/main/resources/templates/add-smartphone-offer.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<footer th:replace="/fragments/commons :: footer"></footer>
+<footer th:replace="/fragments/footer-fixed-bottom :: footer-fixed-bottom"></footer>
 
 </body>
 </html>
