--- a/src/main/resources/templates/my-coupons.html
+++ b/src/main/resources/templates/my-coupons.html
@@ -109,7 +109,7 @@
     </th:block>
 </div>
 
-<footer th:replace="/fragments/commons :: footer"></footer>
+<footer th:replace="/fragments/footer-fixed-bottom :: footer-fixed-bottom"></footer>
 
 </body>
 </html>
