Made the error-handling and some vision changes to the site.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,8 +3,8 @@ footer {
     width:100%;
 }
 .bg-blur {
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.6); /* Black w/opacity/see-through */
+    /*background-color: rgb(0, 0, 0); !* Fallback color *!*/
+    background-color: rgb(22 48 45 / 66%); /* Black w/opacity/see-through */
     color: black;
     font-weight: bold;
     z-index: 2;
