--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-<nav th:fragment="navigation" class="navbar navbar-expand-lg navbar-light bg-light ">
+<nav style="background-color: rgb(151 203 200);" th:fragment="navigation" class="navbar navbar-expand-lg navbar-light bg-blur ">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/images/navlogo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -99,7 +99,7 @@
                     </li>
                 </ul>
             </li>
-            <li id="balanceId" class="nav-item bg-success">
+            <li style="background-color: #237600!important;" id="balanceId" class="nav-item">
 
             </li>
             <script th:src="@{/js/userInfo.js}"></script>
