--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,9 +42,9 @@
         <div class="col-md-4 col-sm-6">
             <div class="card mb-30"><a class="card-img-tiles" href="/users/my-coupons" data-abc="true">
                 <div class="inner">
-                    <div class="main-img"><img src="https://imgur.com/t/coupons/Qaahz" alt="Category"></div>
-                    <div class="thumblist"><img src="https://i.imgur.com/dWYAg41.jpg" alt="Category"><img
-                            src="https://i.imgur.com/5oQEZSC.jpg" alt="Category"></div>
+                    <div class="main-img"><img src="/images/gift.png" alt="Category"></div>
+                    <div class="thumblist"><img src="/images/bigCoupon.jpg" alt="Category"><img
+                            src="/images/couponTwo.svg" alt="Category"></div>
                 </div>
             </a>
                 <div class="card-body text-center">
