--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                <div class="card text-white" style="border-radius: 1rem; background-color: #237600!important;">
                     <div class="card-body p-5 text-center">
 
                         <form th:action="@{/users/register}" th:method="post" th:object="${userRegisterBindingModel}">
