--- a/src/main/resources/templates/warehouse.html
+++ b/src/main/resources/templates/warehouse.html
@@ -9,10 +9,10 @@
     <div class="row">
 
         <div class="col" id="computersId">
-            <h2 class="bg-blur text-light">COMPUTERS ON STOCK:</h2>
+            <h2 class="bg-blur text-light" th:text="#{computersOnStock}">COMPUTERS ON STOCK:</h2>
         </div>
         <div class="col" id="smartphonesId">
-            <h2 class="bg-blur text-light">SMARTPHONES ON STOCK:</h2>
+            <h2 class="bg-blur text-light" th:text="#{smartphonesOnStock}">SMARTPHONES ON STOCK:</h2>
         </div>
     </div>
 
