--- a/src/main/resources/templates/add-computer-offer.html
+++ b/src/main/resources/templates/add-computer-offer.html
@@ -6,7 +6,7 @@
 <nav th:replace="/fragments/commons :: navigation"></nav>
 
 <div class="p-5 text-center">
-    <h1 class="bg-blur text-light border-bottom border-top border-left border-right">Add Computer Offer</h1>
+    <h1 class="bg-blur text-light border-bottom border-top border-left border-right" th:text="#{addComputerOffer}">Add Computer Offer</h1>
     <div class="d-flex justify-content-center">
         <form th:action="@{/offers/add-computer-offer}" th:method="post" th:object="${computerOfferAddBindingModel}"
                 class="text-light">
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
-                <button class="btn btn-success btn-block w-50" type="submit">Add Computer Offer</button>
+                <button class="btn btn-success btn-block w-50" type="submit" th:text="#{addComputerOffer}">Add Computer Offer</button>
             </div>
         </form>
     </div>
