--- a/src/main/resources/templates/add-computer.html
+++ b/src/main/resources/templates/add-computer.html
@@ -6,7 +6,7 @@
 <nav th:replace="/fragments/commons :: navigation"></nav>
 
 <div class="p-5 text-center">
-    <h1 class="bg-blur text-light border-bottom border-top border-left border-right">Add Computer</h1>
+    <h1 class="bg-blur text-light border-bottom border-top border-left border-right" th:text="#{addComputer}">Add Computer</h1>
     <div class="d-flex justify-content-center">
         <form th:action="@{/computers/add-computer}" th:method="post" th:object="${computerAddBindingModel}"
               class="text-light">
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
-                <button class="btn btn-success btn-block w-50" type="submit">Add Computer</button>
+                <button class="btn btn-success btn-block w-50" type="submit" th:text="#{addComputer}">Add Computer</button>
             </div>
         </form>
     </div>
