--- a/src/main/resources/templates/add-smartphone.html
+++ b/src/main/resources/templates/add-smartphone.html
@@ -6,7 +6,7 @@
 <nav th:replace="/fragments/commons :: navigation"></nav>
 
 <div class="p-5 text-center">
-    <h1 class="text-light bg-blur border-bottom border-top border-left border-right">Add Smartphone</h1>
+    <h1 class="text-light bg-blur border-bottom border-top border-left border-right" th:text="#{addSmartphone}">Add Smartphone</h1>
     <div class="d-flex justify-content-center">
         <form th:action="@{/smartphones/add-smartphone}" th:method="post" th:object="${smartphoneAddBindingModel}"
                 class="text-light">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
-                <button class="btn btn-success btn-block w-50" type="submit">Add Smartphone</button>
+                <button class="btn btn-success btn-block w-50" type="submit" th:text="#{addSmartphone}">Add Smartphone</button>
             </div>
         </form>
     </div>
