--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,32 +6,26 @@
 
 <nav th:replace="/fragments/commons :: navigation"></nav>
 
-<!--<main class="">-->
-
-<!--    <div id="intro" class="p-xl-5">-->
-<!--        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">-->
-<!--            <div class="container d-flex align-items-center justify-content-center text-center h-100">-->
-<!--                <div class="text-white">-->
-
-
-<!--                    <h5 class="mb-4">Enjoy your stay in our device shop application</h5>-->
-<!--                    <h5 class="mb-4">You can <a href="/users/login">login</a> or <a href="/users/register">register</a>-->
-<!--                        to have access to specific things in the shop</h5>-->
-<!--                                        <a class="btn btn-outline-light btn-lg m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button"-->
-<!--                                           rel="nofollow" target="_blank">Start tutorial</a>-->
-<!--                                        <a class="btn btn-outline-light btn-lg m-2" href="https://mdbootstrap.com/docs/standard/" target="_blank"-->
-<!--                                           role="button">Download MDB UI KIT</a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</main>-->
-
 <div class="container px-4 px-lg-5 mt-5 p-5" style="">
     <div class="row gx-4 gx-lg-5  align-items-center justify-content-center text-center">
         <div class="col-lg-8 align-self-end bg-blur">
-            <h1 class="font-weight-bold" style="color: #ff8100!important;">DEVICE SHOP</h1>
-            <h3 class="mb-3" style="color: #ff8100!important;">Welcome,
+            <h1 class="font-weight-bold" style="color: #ff8100!important;" th:text="#{shop}">DEVICE SHOP</h1>
+
+            <form th:method="get">
+                <label style="color: #97cbc8!important;" th:text="#{lang}" for="lang"></label>
+                <select
+                        style="background-color: #97cbc8!important; color: #003656!important;"
+                        class="form-select-sm font-weight-bold"
+                        onchange="this.form.submit()"
+                        id="lang"
+                        name="lang">
+                    <option value="en_US" th:selected="${#locale.toString()} == 'en_US'">English</option>
+                    <option value="de_DE" th:selected="${#locale.toString()} == 'de_DE'">Deutsch</option>
+                </select>
+            </form>
+            <!--                    <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Български</option>-->
+
+            <h3 class="mb-3" style="color: #ff8100!important;" >[(#{welcomeBeginning})]
                 <span sec:authorize="isAuthenticated()"
                       sec:authentication="name">
                             Name of the logged in user.
@@ -44,13 +38,25 @@
         </div>
         <div class="col-lg-8 align-self-baseline bg-blur">
 
-            <p class="mb-5 h3" style="color: #ff8100!important;">You can login or register to have access to specific services in the shop</p>
-            <div>
-                <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/users/login}">Login</a>
-                <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/users/register}">Register</a>
-            </div>
+            <th:block sec:authorize="!isAuthenticated()">
+                <p class="mb-5 h3" style="color: #ff8100!important;" th:text="#{loginHello}">You can login or register to have access to specific services in the shop</p>
+                <div>
+                    <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/users/login}" th:text="#{login}">Login</a>
+                    <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/users/register}" th:text="#{register}">Register</a>
+                </div>
+            </th:block>
 
-            <p class="text-white-75 mb-5 mt-5 h4" style="color: #ff8100!important;">Welcome to our shop about smartphone and computer devices</p>
+            <th:block sec:authorize="isAuthenticated()">
+                <p class="mb-5 h3" style="color: #ff8100!important;" th:text="#{viewHello}">You can view our available products by clicking one of the buttons below!</p>
+                <div>
+                    <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/smartphones/catalog}">Smartphones</a>
+                    <a class="btn btn-primary btn-lg col-md-3 btn-outline-warning m-2" th:href="@{/computers/catalog}">Computers</a>
+                </div>
+            </th:block>
+
+            <p class="h4 mt-5" style="color: #ff8100!important;" th:text="#{welcomeHello}">Welcome to our shop about smartphone and computer devices.</p>
+            <p sec:authorize="isAuthenticated()" class="h4" style="color: #ff8100!important;" th:text="#{addMoneyOne}">You can add money on your profile page.</p>
+            <a class="btn-outline-warning font-weight-bold h4 text-decoration-underline" th:href="@{/users/profile}" th:text="#{profile}"></a>
         </div>
     </div>
 </div>
