--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,8 +15,8 @@
                         <form th:action="@{/users/login}" th:method="post">
                             <div class="mb-md-5 mt-md-4 pb-5">
 
-                                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                                <p class="text-white-50 mb-5">Please enter your username and password!</p>
+                                <h2 class="fw-bold mb-2 text-uppercase" th:text="#{login}">Login</h2>
+                                <p class="text-white-50 mb-5" th:text="#{enterLoginDetails}">Please enter your username and password!</p>
 
                                 <div class="form-outline form-white mb-4">
                                     <input type="text" name="username" id="inputUsername" th:value="${username}" class="form-control form-control-lg" />
@@ -31,13 +31,13 @@
                                 <p th:if="${bad_credentials}" class="alert alert-danger bg-danger text-light rounded">
                                     Invalid username or password
                                 </p>
-                                <input type="submit" class="btn btn-outline-light btn-lg px-5 btn-primary" value="Login">
+                                <input type="submit" class="btn btn-outline-light btn-lg px-5 btn-primary" th:value="#{login}">
 
                             </div>
                         </form>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a th:href="@{/users/register}" class="text-white-50 fw-bold">Sign Up</a></p>
+                            <p class="mb-0">[(#{notHavingAccount})] <a th:href="@{/users/register}" class="text-white-50 fw-bold">Sign Up</a></p>
                         </div>
 
                     </div>
