--- a/src/main/resources/templates/my-coupons.html
+++ b/src/main/resources/templates/my-coupons.html
@@ -7,7 +7,7 @@
 
 <div class="container my-5">
 <!--NOT ACTIVE BUTTONS-->
-    <h3 class="text-white bg-blur text-center">NOT ACTIVE COUPONS:</h3>
+    <h3 class="text-white bg-blur text-center" th:text="#{notActiveCoupons}">NOT ACTIVE COUPONS:</h3>
     <th:block th:if="${notActiveUserCoupons.size() == 0}">
         <div class="container-fluid mt-5">
             <div class="row">
@@ -15,8 +15,8 @@
                     <div class="card bg-danger">
                         <div class="card-body cart">
                             <div class="col-sm-12 empty-cart-cls text-center">
-                                <h3><strong class="text-white">NO COUPONS AVAILABLE</strong></h3>
-                                <h4 class="text-white">Check later!</h4>
+                                <h3><strong class="text-white" th:text="#{noCoupons}">NO COUPONS AVAILABLE</strong></h3>
+                                <h4 class="text-white" th:text="#{checkLater}">Check later!</h4>
                             </div>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="tengah py-3 d-flex w-100 justify-content-start">
                         <div>
-                            <span class="badge badge-success">Valid</span>
+                            <span class="badge badge-success" th:text="#{valid}">Valid</span>
                             <h3 class="lead" th:text="|*{percentageNumber}% discount coupon.|"></h3>
                             <p class="text-muted mb-0" th:text="*{description}"></p>
                         </div>
@@ -47,7 +47,7 @@
                     <div class="kanan">
                         <div class="info m-3 d-flex align-items-center">
                             <div class="w-100">
-                                <a th:href="@{/users/my-coupons/{id}/activate(id = *{id})}"  class="btn btn-sm btn-outline-danger btn-block">
+                                <a th:href="@{/users/my-coupons/{id}/activate(id = *{id})}"  class="btn btn-sm btn-outline-danger btn-block" th:text="#{activate}">
                                     Activate
                                 </a>
                             </div>
@@ -58,7 +58,7 @@
         </div>
     </th:block>
     <!--ACTIVE BUTTONS-->
-    <h3 class="text-white bg-blur text-center mt-5">ACTIVE COUPONS:</h3>
+    <h3 class="text-white bg-blur text-center mt-5" th:text="#{activeCoupons}">ACTIVE COUPONS:</h3>
     <th:block th:if="${activeUserCoupons.size() == 0}">
         <div class="container-fluid mt-5">
             <div class="row">
@@ -66,8 +66,8 @@
                     <div class="card bg-danger">
                         <div class="card-body cart">
                             <div class="col-sm-12 empty-cart-cls text-center">
-                                <h3><strong class="text-white">NO ACTIVE COUPONS AVAILABLE</strong></h3>
-                                <h4 class="text-white">Check later!</h4>
+                                <h3><strong class="text-white" th:text="#{noActiveCoupons}">NO ACTIVE COUPONS AVAILABLE</strong></h3>
+                                <h4 class="text-white" th:text="#{checkLater}">Check later!</h4>
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="tengah py-3 d-flex w-100 justify-content-start">
                         <div>
-                            <span class="badge badge-success">Valid</span>
+                            <span class="badge badge-success" th:text="#{valid}">Valid</span>
                             <h3 class="lead" th:text="|*{percentageNumber}% discount coupon.|"></h3>
                             <p class="text-muted mb-0" th:text="*{description}"></p>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="kanan">
                         <div class="info m-3 d-flex align-items-center">
                             <div class="w-100">
-                                <a disabled="disabled" class="bg-success btn-sm btn-block">
+                                <a disabled="disabled" class="bg-success btn-sm btn-block" th:text="#{activated}">
                                     Activated
                                 </a>
                             </div>
