--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
                     </h6>
                     <ul class="nav nav-tabs " id="myTab" role="tablist">
                         <li class="nav-item">
-                            <div class="nav-link active " id="home-tab" aria-selected="true">About</div>
+                            <div class="nav-link active " id="home-tab" aria-selected="true" th:text="#{about}">About</div>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +35,7 @@
     padding: 2%;
     font-weight: 600;
     color: #1de9b6;
-    cursor: pointer;">Add Money</a>
+    cursor: pointer;" th:text="#{addMoney}">Add Money</a>
             </div>
         </div>
         <div class="row">
@@ -46,7 +46,7 @@
                     <div class="tab-pane fade show active" id="home">
                         <div class="row">
                             <div class="col-md-6" style="color: #00c853">
-                                <label class="font-weight-bold">First Name</label>
+                                <label class="font-weight-bold" th:text="#{firstName}">First Name</label>
                             </div>
                             <div class="col-md-6">
                                 <p style="color: #00c853" th:text="*{firstName}"></p>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="font-weight-bold" style="color: #00c853">Last Name</label>
+                                <label class="font-weight-bold" style="color: #00c853" th:text="#{lastName}">Last Name</label>
                             </div>
                             <div class="col-md-6">
                                 <p style="color: #00c853" th:text="*{lastName}"></p>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="font-weight-bold" style="color: #00c853">Age</label>
+                                <label class="font-weight-bold" style="color: #00c853" th:text="#{age}">Age</label>
                             </div>
                             <div class="col-md-6">
                                 <p style="color: #00c853" th:text="*{age}"></p>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="font-weight-bold" style="color: #00c853">Born On</label>
+                                <label class="font-weight-bold" style="color: #00c853" th:text="#{bornOn}">Born On</label>
                             </div>
                             <div class="col-md-6">
                                 <p style="color: #00c853" th:text="*{bornOn}"></p>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="font-weight-bold" style="color: #00c853">Country</label>
+                                <label class="font-weight-bold" style="color: #00c853" th:text="#{country}">Country</label>
                             </div>
                             <div class="col-md-6">
                                 <p style="color: #00c853" th:text="*{country}"></p>
