--- a/src/main/resources/templates/computers-catalog.html
+++ b/src/main/resources/templates/computers-catalog.html
@@ -15,8 +15,8 @@
                         <div class="col-sm-12 empty-cart-cls text-center"><img src="https://i.imgur.com/dCdflKN.png"
                                                                                width="130" height="130"
                                                                                class="img-fluid mb-4 mr-3">
-                            <h3><strong class="text-white">NO COMPUTERS AVAILABLE</strong></h3>
-                            <h4 class="text-white">Come back later to check if we have something new for buying</h4>
+                            <h3><strong class="text-white" th:text="#{noComputersAvailable}">NO COMPUTERS AVAILABLE</strong></h3>
+                            <h4 class="text-white" th:text="#{comeBackLater}">Come back later to check if we have something new for buying</h4>
                         </div>
                     </div>
                 </div>
