--- a/src/main/resources/templates/warehouse.html
+++ b/src/main/resources/templates/warehouse.html
@@ -20,7 +20,7 @@
 </div>
 
 
-<footer th:replace="/fragments/commons :: footer"></footer>
+<footer th:replace="/fragments/footer-fixed-bottom :: footer-fixed-bottom"></footer>
 
 </body>
 </html>
